test/tests/operators/accept_unix_socket/validation/error_missing_parent.txt
error: failed to inspect UNIX domain socket directory
 --> tests/operators/accept_unix_socket/validation/error_missing_parent.tql:5:20
  |
5 | accept_unix_socket "/tmp/tenzir-uds-missing-parent/test.sock" {
  |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = note: path: /tmp/tenzir-uds-missing-parent
  = note: reason: No such file or directory
